--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body data-spy="scroll" data-target=".scroll-spy" >
+<body>
 
     <%= render 'layouts/header' %>
 
@@ -30,7 +30,7 @@
         </div>
     <% end %>
 
-    <div class="container">
+    <div class="container-fluid main">
         
       <%= yield %>
      
