--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,15 +3,13 @@
 /* Bootstrap overrides */
 
 $baseFontSize: 13px; 
-$navbarBackground: #172237;
+// $navbarBackground: #172237;
 $navbarBackgroundHighlight: rgba(0,0,0,0);
+$linkColor: #1146a6;
 
 @import "bootstrap";
 @import "bootstrap-responsive";
-@import "scopes/styles";
-@import "project/styles";
-@import "navbar/styles";
-@import "map_vis/styles";
+
 
 
 
@@ -32,13 +30,21 @@ html {
 
 body {
   font-family: Tahoma, Arial, sans-serif;
-  padding-top: 60px;
   line-height: 14px;
+
+  .container, .container-fluid {
+
+    &.main {
+      background-color: white;
+    }
+  }
 }
 
+/*
 section {
   overflow: auto;
 }
+//*/
 
 .alerts {
   margin-top: 10px;
@@ -84,18 +90,6 @@ p {
   font-size: 1em;
 }
 
-
-                      /* header */
-
-#first_header{
-  position:relative;
-  text-shadow:1px 1px #cce;
-  color:#000;
-  top:-80px;
-  z-index:5;
-}
-
-
                                       /* footer */
 
 footer {
@@ -134,6 +128,24 @@ footer {
   width: 100%;
   margin-top: 45px;
   @include box_sizing;
+}
+
+
+.home_thumbnails {
+    .thumbnail {
+      position: relative;
+      h4 {
+        text-shadow: rgba(18, 30, 50, .4) 2px 2px 5px;
+        padding: 10px;
+        position: absolute;
+    }
+  }
+}
+
+#home_media {
+  h1,h2,h3,h4 {
+    text-shadow: rgba(18, 30, 50, .4) 2px 2px 5px;
+  }
 }
 
 
