remove unneeded JS, CSV analyzer improvements

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,7 @@ $baseFontSize: 13px;
 // $navbarBackground: #172237;
 $navbarBackgroundHighlight: rgba(0,0,0,0);
 $linkColor: #1146a6;
+$sansFontFamily: Arial, Tahoma, sans-serif;
 
 @import "bootstrap";
 @import "bootstrap-responsive";
