remove unneeded JS, CSV analyzer improvements

--- a/app/views/projects/_search_export.html.erb
+++ b/app/views/projects/_search_export.html.erb
@@ -8,7 +8,7 @@
       <%= link_to "Quick Export (AidData only)", 
         "#{@current_url.gsub(/projects/, 'projects.csv')}", class: 'btn' %> 
       <%= link_to "Analyze this CSV", 
-        "#{@current_url.gsub(/projects/, 'csv_health')}", class: 'btn btn-info' %> 
+        "#{@current_url.gsub(/projects/, 'csv_analyzer')}", class: 'btn btn-info' %> 
     <% end %>
 
 
