ProjectSweeper covers Flag and Comment also

--- a/app/views/static_pages/csv_analyzer.html.erb
+++ b/app/views/static_pages/csv_analyzer.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'CSV Health') %>
+<% provide(:title, 'CSV Analyzer') %>
 
 <%
 	query_string = "#{request.fullpath.gsub(/\/(csv_health)?\??/, '')}"
