--- a/app/assets/stylesheets/layout/header.css.scss.erb
+++ b/app/assets/stylesheets/layout/header.css.scss.erb
@@ -7,7 +7,24 @@ header {
 	background-clip: border-box;
 	background-repeat: no-repeat;
 
+	min-height: 100px; 
 	width: 100%;
+
+
+	#logo {
+	  float: left;
+	  margin-right: 10px;
+	  font-size: 1.7em;
+	  color: #fff;
+	  text-transform: uppercase;
+	  letter-spacing: -1px;
+	  padding-top: 0px;
+	  font-weight: bold;
+	  line-height: 1;
+	    img {
+	    	height:100px;
+	    }
+	}
 
 	.navbar  {
 
@@ -81,22 +98,6 @@ header {
 
 
 
-
-
-	#logo {
-	  float: left;
-	  margin-right: 10px;
-	  font-size: 1.7em;
-	  color: #fff;
-	  text-transform: uppercase;
-	  letter-spacing: -1px;
-	  padding-top: 0px;
-	  font-weight: bold;
-	  line-height: 1;
-	    img {
-	    	height:100px;
-	    }
-	}
 
 
 	#header_content {
