--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,22 +1,44 @@
 <% @unset_data = "<span class='unset-data'>Unset</span>".html_safe %>
 <% @flag_counter = 0 %>
-<div class="project-page">
+<div class="project-page row container-fluid">
 
+<% 
+header_content = <<EOS
+<h1 class='project-header'>
+	#{@project.title}
+	#{ if !@project.active
+		'<span id="inactive-project">(Inactive Record)</span>'
+	 end} 
+</h1>
 
-<div class="row">
-	<div class= "project-box span10">
-	<h3> Overview:</h3>
-		<ul class="project-overview span6"> 
+EOS
 
+provide(:header_content, header_content.html_safe)
+
+%>
+
+<div class="row-fluid">
+
+	<div class= "project-box span6">
+		<h3> Overview, <%= link_to "project ##{@project.id}",  @project %></h3>
+		<ul class="unstyled"> 
 			<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Donor", heading: "Donor"} %> 
+			<li>
+				<b>Recipient Countries:</b>
+				<%= render 'project_geopoliticals' %>
+			</li>
 			<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Year", heading: "Commitment Year"} %> 
 				<% if @project.year_uncertain %>
 					<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "YearUncertain", heading: ""} %>
 				<% end %>
 			<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Usd_2009", heading: "Total Amount (USD-2009)" } %>
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "CrsSector", heading: "CRS Sector"} %>			
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "FlowType", heading: "Flow Type"} %>
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "VisibleFlowClass", heading: "Flow Class"} %>
+
 			<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Scope", heading: "Scope" } %>
 			<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Verified", heading: "Verified"} %> 
-			<li><b>ID:</b> <%= link_to @project.id,  @project %></li>
+
 			<% if current_user_is_aiddata %>
 				<% robocode = @project.robocode %>
 			<li>
@@ -34,52 +56,34 @@
 
 		
 		</ul>
-		<div class="span3" >
-			<%= render 'project_files' %>
-		</div>
 	</div>
-	<div class="project-box span10">
-		<h3>Description:</h3>
-		<ul>
-			<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Description", heading: ""} %>
-			<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Capacity", heading: "Capacity" } %>
-		<ul>
+	
+	<div class="span6" >
+		<%= render 'project_files' %>
 	</div>
+	
 </div>
+
 <div class="row">
-	<div class="project-categories project-box span5">
-		<h3>Codes &amp; Markers: </h3>
-		<ul>
-			<!-- ODALIKE has been removed !-->
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "VisibleFlowClass", heading: "Flow Class"} %>
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "Intent", heading: "Intent"} %>
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "Status", heading: "Status"} %>
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "CrsSector", heading: "CRS Sector"} %>			
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "SectorComment", heading: "Sector Comment"} %>			
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "DebtUncertain", heading: "Debt Uncertain"} %>			
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "FlowType", heading: "Flow Type"} %>
-			<!-- TIED has been removed. !-->
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsCommercial", heading: "Commercial"} %>			
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "LineOfCredit", heading: "Line of Credit"} %>			
-			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsCofinanced", heading: "Is Cofinanced"} %>
-			<% if Rails.env.development? %>
-				<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "OldOdaLike", heading: "Old Flow Class (not shown on production)"} %>
-			<% end %>
-		</ul>
-		<% if current_user_is_aiddata %>
-			<h3>Flow Class:</h3>
-			<ul>
-				<li><b>Arbitrated Value:</b> <%= @project.flow_class.show_round("master") %> </li>
-				<li><b>Round 1:</b> <%= @project.flow_class.show_round(1) %> </li>
-				<li><b>Round 2:</b> <%= @project.flow_class.show_round(2) %> </li>
-			</ul>
-      		<span class='muted' ><i> All three code rounds are only visible to 
-          AidData-affiliated users.</i></span>
-		<% end %>
+	<h3>Description:</h3>
+	<ul class='unstyled'>
+		<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Description", heading: ""} %>
+		<%= render partial: "project_detail", locals: {container_tag: "li", class_name: "Capacity", heading: "Capacity" } %>
+	<ul>
+</div>
+
+<div class="row-fluid">
+	<div class="project-participating-organizations span3">
+		<h3>Participating Organizations:</h3>
+		<%= render 'project_participating_organizations' %>
 	</div>
-	<div class="project-dates project-box span5">
+	<div class="project-contacts span3">
+		<h3>Contacts:</h3>
+			<%= render 'project_contacts' %>
+	</div>
+	<div class="span3">
 		<h3>Dates:</h3>
-		<ul>
+		<ul class='unstyled'>
       <%= render partial: 'project_detail', locals: {container_tag: "li",
         class_name: "StartPlanned", heading: "Start (Planned)"} %>
 
@@ -93,56 +97,79 @@
         class_name: "EndActual", heading: "End (Actual)"} %>
 
 		</ul>
-    <h3>Loan Details:</h3>
-    <ul>
-      <%= render partial: 'project_detail', locals: {container_tag: "li",
-        class_name: "LoanType", heading: "Loan Type"} %>
+	</div>
+	<div class='span3'>
+	    <h3>Loan Details:</h3>
+	    <ul class='unstyled'>
+	      <%= render partial: 'project_detail', locals: {container_tag: "li",
+	        class_name: "LoanType", heading: "Loan Type"} %>
 
-      <%= render partial: 'project_detail', locals: {container_tag: "li",
-        class_name: "InterestRate", heading: "Interest Rate",
-        units: :percentage } %>
+	      <%= render partial: 'project_detail', locals: {container_tag: "li",
+	        class_name: "InterestRate", heading: "Interest Rate",
+	        units: :percentage } %>
 
-      <%= render partial: 'project_detail', locals: {container_tag: "li",
-        class_name: "Maturity", heading: "Maturity",
-        units: :years} %>
+	      <%= render partial: 'project_detail', locals: {container_tag: "li",
+	        class_name: "Maturity", heading: "Maturity",
+	        units: :years} %>
 
-      <%= render partial: 'project_detail', locals: {container_tag: "li",
-        class_name: "GracePeriod", heading: "Grace Period", units: :years} %>
+	      <%= render partial: 'project_detail', locals: {container_tag: "li",
+	        class_name: "GracePeriod", heading: "Grace Period", units: :years} %>
 
-      <%= render partial: 'project_detail', locals: {container_tag: "li",
-        class_name: "GrantElement", heading: "Grant Element",
-        units: :percentage } %>
-    </ul>
+	      <%= render partial: 'project_detail', locals: {container_tag: "li",
+	        class_name: "GrantElement", heading: "Grant Element",
+	        units: :percentage } %>
+	    </ul>
 	</div>
 </div>
-<div class='row'>
+<div class='row-fluid'>
+	<div class="span6">
+		<h3>Codes &amp; Markers: </h3>
+		<ul class='unstyled'>
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "Intent", heading: "Intent"} %>
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "Status", heading: "Status"} %>
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "SectorComment", heading: "Sector Comment"} %>			
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "DebtUncertain", heading: "Debt Uncertain"} %>			
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsCommercial", heading: "Commercial"} %>			
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "LineOfCredit", heading: "Line of Credit"} %>			
+			<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "IsCofinanced", heading: "Is Cofinanced"} %>
+			<% if Rails.env.development? %>
+				<%= render partial: 'project_detail', locals: {container_tag: "li", class_name: "OldOdaLike", heading: "Old Flow Class (not shown on production)"} %>
+			<% end %>
+		</ul>
+	</div>
+
+</div>
+<div class='row-fluid'>
 	
-	<div class="project-transactions project-box span5">
+	<div class="project-transactions span6">
 		<h3>Transactions:</h3>
 		<%= render 'project_transactions' %>
 	</div>
 	
-	<div class="project-geopoliticals project-box span5">
-		<h3>Recipient Countries:</h3>
-		<%= render 'project_geopoliticals' %>
-	</div>
-</div>
-<div class='row'>
-	<div class="project-participating-organizations project-box span5">
-		<h3>Participating Organizations:</h3>
-		<%= render 'project_participating_organizations' %>
-	</div>
-	<div class="project-contacts project-box span5">
-		<h3>Contacts:</h3>
-			<%= render 'project_contacts' %>
-	</div>
-</div>
-<div class='row'>
-	<div class="project-sources project-box span10">
-		<h3>Sources:</h3>
-		<%= render 'project_sources' %>
-	</div>
+
 </div>
 
+	<div class='row-fluid'>
+		<div class="span6">
+			<h3>Sources:</h3>
+			<%= render 'project_sources' %>
+		</div>
+		<div class='span6'>
+			<%= render 'project_comments' %>
+			<%= render 'comment_form' %>
+		</div>
+	</div>
+	<div class='row-fluid'>
+		<% if current_user_is_aiddata %>
+			<h3>Flow Class Code Rounds:</h3>
+			<ul class='unstyled'>
+				<li><b>Arbitrated Value:</b> <%= @project.flow_class.show_round("master") %> </li>
+				<li><b>Round 1:</b> <%= @project.flow_class.show_round(1) %> </li>
+				<li><b>Round 2:</b> <%= @project.flow_class.show_round(2) %> </li>
+			</ul>
+      		<span class='muted' ><i> All three code rounds are only visible to 
+          AidData-affiliated users.</i></span>
+		<% end %>
+	</div>
 </div>
 <%= render('project_flaggable')  %>
