--- a/app/views/projects/_project_files.html.erb
+++ b/app/views/projects/_project_files.html.erb
@@ -12,8 +12,8 @@
 			var target = $('#files')
 			if(data["contents"] && data.contents.length > 0) {
 				menu = data.contents.map(function(d) { return "<li id='"+d.type+"-"+d.key+"' class='document'>" +
-							"<i class='"+ (d.type == 'document' ? 'icon-file' : 'icon-folder-close') + "'></i>" +
-							"<a href='http://aiddata-fs.herokuapp.com/documents/"+ d.key + "' onclick=\"App.navigate_to('"+d.type+"','"+d.key+"')\">" +
+							(d.type == 'document' ? '<img src="'+d.icon+'" />' : '<i class="icon-folder-close"></i>')  +
+							"&ensp;<a href='http://aiddata-fs.herokuapp.com/documents/"+ d.key + "' onclick=\"App.navigate_to('"+d.type+"','"+d.key+"')\">" +
 							d.name + 
 							"</a>" +
 							" </li>"}).join("") 
