--- a/app/views/projects/_project_geopoliticals.html.erb
+++ b/app/views/projects/_project_geopoliticals.html.erb
@@ -1,6 +1,6 @@
-		<ul>
+		<ul class='unstyled'>
 			<% @project.geopoliticals.each do |g| %>
-				<li class="project-geopolitical project-li flaggable" flaggable_type='Geopolitical' flaggable_id=<%= g.id %>>
+				<li class="project-li flaggable" flaggable_type='Geopolitical' flaggable_id=<%= g.id %>>
 					<% if !g.recipient.nil? %>
 						<b><%= link_to g.recipient.name, g.recipient %></b> 
 						<%= g.subnational.blank? ? '' : "(#{g.subnational})" %>
