--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,33 +1,24 @@
-<% provide(:title, @project.title) %>
-<% provide(:first_header, @project.title) %>
+<% provide(:title, "#{ @project.title.blank? ? "(No Title)" : @project.title }") %>
 
 
 <div class="project-details row">	
-	<%  if !@project.active %>
-		<h1 style="display:inline;text-align:center;" id="inactive-project">-- Inactive --</h1>
-	<% end %>
 	<% if (signed_in? && current_user.owner == @project.owner) || (@project.owner.nil? && current_user.owner ==  Organization.find_by_name("AidData")) %>
 			<p class='edit-project-link'><b><%= link_to "Edit this project", edit_project_path(@project) %></b></p> 
 			<p class='delete-project-link'><b><%= link_to "Delete this project", @project, method: :delete, confirm: "Are you sure?" %></b></p>
 	<% end %>
 </div>
 
-<ul class="nav nav-tabs" id="projectTab">
+<ul class="nav nav-tabs row" id="projectTab">
   <li class="active"><a href="#details">Project Details</a></li>
   <li><a id="flags_tab" href="#flags">Flags (<%= @flags.count %>)</a></li>
-   <li><a href="#comments">Comments (<%= @project.comments.count %>)</a></li>
   <li><a href="#history">History (<%= @history.count %>)</a></li>
 </ul>
 
 
-<div class="tab-content">
+<div class="tab-content row">
   <div class="tab-pane active" id="details">
-  		<h2>Project Details</h2>
 		<%= render 'project' %>
-		<div class='row'>
-			<%= render 'comment_form' %>
-		</div>
-	</div>
+  </div>
   <div class="tab-pane" id="flags">
 		<h2 id='flags_header'>Flags</h2>
 		<%= render 'project_flags' %>
@@ -35,13 +26,6 @@
 	<div class="tab-pane" id="history">
 		<h2>History</h2>
 		<%= render 'project_history' %>
-	</div>
-	<div class="tab-pane" id="comments">
-		<h2>Comments</h2>
-		<%= render 'project_comments' %>
-		<div class='row'>
-			<%= render 'comment_form' %>
-		</div>
 	</div>
 </div>
 
