Links on home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -68,23 +68,29 @@ EOS
 
 <div class='row-fluid home_thumbnails'>
 	<ul class='thumbnails '>
-		<li class='span4'>
-			<a href="#" class="thumbnail">
+		<li class='span3'>
+			<a href="<%= bubbles_path %>" class="thumbnail">
 				<h4>See the Big Picture &rarr;</h4>
-				<img src='holder.js/400x200'>
+				<img src='holder.js/300x200'>
 				
 			</a>
 		</li>
-		<li class='span4'>
-			<a href="#" class="thumbnail">
+		<li class='span3'>
+			<a href="<%= map_path %>" class="thumbnail">
 				<h4>Country-Level Perspective &rarr;</h4>
-				<img src='holder.js/400x200'>
+				<img src='holder.js/300x200'>
 			</a>
 		</li>
-		<li class='span4'>
-			<a href="#" class="thumbnail">
+		<li class='span3'>
+			<a href="<%= projects_path %>" class="thumbnail">
 				<h4>Project-Level Data &rarr;</h4>
-				<img src='holder.js/400x200'>
+				<img src='holder.js/300x200'>
+			</a>
+		</li>
+		<li class='span3'>
+			<a href="<%= aggregate_export_path %>" class="thumbnail">
+				<h4>Aggregated Data &rarr;</h4>
+				<img src='holder.js/300x200'>
 			</a>
 		</li>
 	</ul>
