--- a/app/assets/stylesheets/layout/header.css.scss.erb
+++ b/app/assets/stylesheets/layout/header.css.scss.erb
@@ -101,7 +101,11 @@ header {
 
 
 	#header_content {
-
+		h1 {
+			margin-left: 180px;
+			color: white;
+			text-shadow: black 2px 2px 10px;
+	}
 
 		#home_carousel {
 			
