--- a/app/assets/stylesheets/project/project_show.css.scss
+++ b/app/assets/stylesheets/project/project_show.css.scss
@@ -1,6 +1,6 @@
 
 .project-header {
-  text-shadow: rgba(255,255,255,1) 0px 0px 4px;
+  //text-shadow: rgba(255,255,255,1) 0px 0px 4px;
 }
 
 #inactive-project, .inactive-project-title {
