--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -1,36 +1,44 @@
-<div id = "vis_controls" class="row" style='text-align:center;'>
-<%= form_for Project.new, html: {class: ""} do |f| %>
-  <%= f.select :oda_like, options_for_select(["All Flow Classes"] + OdaLike.all.collect {|o| o.name}, "All Flow Classes"), {}, {multiple: true, class: "span2 vis_input", id: "oda_like_input", selected_value: "All Flow Classes"}  %>
-  <%= f.select :verified, options_for_select(["All Verified Levels"] + Verified.all.collect {|o| o.name}, "All Verified Levels"), {}, {class: "span2 vis_input", multiple: true, id: "verified_input"}  %>
-  <%= f.select :crs_sector, options_for_select(["All Sectors"] + CrsSector.all.collect {|o| o.name}, "All Sectors"), {},{class: "span2 vis_input", multiple: true, id: "sector_input"}  %>
-  <%= f.select :flow_type, options_for_select(["All Flow Types"] + FlowType.all.collect {|o| o.name}, "All Flow Types"), {}, {class: "span2 vis_input", multiple: true, id: "flow_type_input"}  %>
-  <%= f.select :year, options_for_select(["All Years"] + (2000..2011).to_a.reverse! , "All Years"), {}, {class: "span2 vis_input", multiple: true, id: "year_input"}  %>
-<% end %>
+<div id = "vis_controls" class='row-fluid'>
+  <div  class="span10 ">
+    <%= form_for Project.new, html: {class: ""} do |f| %>
+      <%= f.select :oda_like, options_for_select(["All Flow Classes"] + OdaLike.all.collect {|o| o.name}, "All Flow Classes"), {}, {multiple: true, class: "span2 vis_input", id: "oda_like_input", selected_value: "All Flow Classes"}  %>
+      <%= f.select :verified, options_for_select(["All Verified Levels"] + Verified.all.collect {|o| o.name}, "All Verified Levels"), {}, {class: "span2 vis_input", multiple: true, id: "verified_input"}  %>
+      <%= f.select :crs_sector, options_for_select(["All Sectors"] + CrsSector.all.collect {|o| o.name}, "All Sectors"), {},{class: "span2 vis_input", multiple: true, id: "sector_input"}  %>
+      <%= f.select :flow_type, options_for_select(["All Flow Types"] + FlowType.all.collect {|o| o.name}, "All Flow Types"), {}, {class: "span2 vis_input", multiple: true, id: "flow_type_input"}  %>
+      <%= f.select :year, options_for_select(["All Years"] + (2000..2011).to_a.reverse! , "All Years"), {}, {class: "span2 vis_input", multiple: true, id: "year_input"}  %>
+    <% end %>
+  </div>
 </div>
 
-    <div class="content">
-<!--[if IE 6]>
-  <div id="error"></div>
-  <div id="vis" style="display:none;"></div>
-<![endif]-->
-<!--[if IE 7]>
-  <div id="error"></div>
-  <div id="vis" style="display:none;"></div>
-<![endif]-->
-<!--[if IE 8]>
-  <div id="error"> </div>
-  <div id="vis" style="display:none;"></div>
-<![endif]-->
-<script type="text/javascript">
-	$('#error').append("<p>Sorry! This interactive graphic requires a browser with SVG support, such as <a href='http://www.google.com/chrome'>Chrome</a>, <a href='http://www.mozilla.org/en-US/firefox/'>Firefox</a>, or <a href='http://www.apple.com/safari/download/'>Safari</a>. </p>")
-</script>
-<!--[if IE 9]>
-  <div id="vis"></div>
-<![endif]-->  
-<![if !IE]><div id="vis"></div><![endif]></div>
+<div class="row-fluid">
+  <!--[if IE 6]>
+    <div id="error"></div>
+    <div id="vis" style="display:none;"></div>
+  <![endif]-->
+  <!--[if IE 7]>
+    <div id="error"></div>
+    <div id="vis" style="display:none;"></div>
+  <![endif]-->
+  <!--[if IE 8]>
+    <div id="error"> </div>
+    <div id="vis" style="display:none;"></div>
+  <![endif]-->
+  <script type="text/javascript">
+  	$('#error').append("<p>Sorry! This interactive graphic requires a browser with SVG support, such as <a href='http://www.google.com/chrome'>Chrome</a>, <a href='http://www.mozilla.org/en-US/firefox/'>Firefox</a>, or <a href='http://www.apple.com/safari/download/'>Safari</a>. </p>")
+  </script>
+  <!--[if IE 9]>
+    <div id="vis"></div>
+  <![endif]-->  
+  <![if !IE]>
+    <div class='span12' id="vis">
+    </div>
+  <![endif]>
+</div>
+
 <div id="tooltip"><p id="tooltiptext"></p></div>
 
 <%= javascript_include_tag   "map/index" %>
+
 <script>
   $(function() {
     $('#tooltip').hide()
