add to content management module

--- a/app/views/review_entries/index.haml
+++ b/app/views/review_entries/index.haml
@@ -1,3 +1,12 @@
 - @review_entries.each do |r|
-  =r.status
-  =r.serialized_item
+  - if r.status == "OPEN"
+    =r.status
+    =r.item
+    %br/
+
+- @review_entries.each do |r|
+  - if r.status == "CLOSED"
+    =r.status
+    =r.serialized_item
+    %br/
+
