new GA, starting new map

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,9 @@ html {
   overflow-y: scroll;
 }
 
+.domain {
+  visibility:hidden;
+}
 body {
   font-family: Tahoma, Arial, sans-serif;
   line-height: 14px;
