--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,13 +43,13 @@
 		<div class='span3 home_thumbnails'>
 			<ul class='thumbnails'>
 				<li>
-					<a href="#" class="thumbnail">
+					<a href="/content/using_the_data" class="thumbnail">
 						<h4>How to Use the Data</h4>
 						<img src='holder.js/250x250'>
 					</a>
 				</li>
 				<li>
-					<a href="#" class="thumbnail">
+					<a href="/content/improving_the_data" class="thumbnail">
 						<h4>Help us Improve the Data</h4>
 						<img src='holder.js/250x250'>
 					</a>
