Global HTML changes

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer span12 row">
+<footer class="footer row">
   <small>
     <a href="http://aiddata.org/"><%= image_tag "adt2_blue.png" %></a>
   </small>
