--- a/app/assets/stylesheets/project/project_show.css.scss
+++ b/app/assets/stylesheets/project/project_show.css.scss
@@ -75,22 +75,9 @@
 }
 
 
-.edit-project-link {
-  float: right;
-  padding:5px;
-  margin:5px;
-  border: 3px solid green;
-  background: lightgreen;
+.project-edit-links p {
+  margin: 10px;
 }
-
-.delete-project-link {
-  float: right;
-  margin:5px;
-  padding:5px;
-  border: 3px solid #d00;
-  background: #f66;
-}
-
 .unset-data {
   font-style: italic;
   font-size: 1em;
