--- a/app/views/contents/show_by_name.html.haml
+++ b/app/views/contents/show_by_name.html.haml
@@ -1,6 +1,7 @@
 - provide :title, @content.name.titleize
 - provide :header_content, "<h1>#{@content.name.titleize}</h1>".html_safe
 
-%p.row.site_content
-	:markdown
-		#{@content.content}
+.row
+	.span12.site_content{style: "margin: auto, auto;"}
+		:markdown
+			#{@content.content}
