--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
         </div>
     <% end %>
 
-    <div class="container-fluid main">
+    <div class="container main">
         
       <%= yield %>
      
