Layout improvemetns on project pages

--- a/app/assets/stylesheets/project/project_show.css.scss
+++ b/app/assets/stylesheets/project/project_show.css.scss
@@ -18,10 +18,10 @@
   background-color: #eee;
 }
 .flag-links {
-	vertical-align:text-top;
 	visibility:hidden;
 	cursor:default;
-	float:right;
+  //display:block;
+	//float:right;
 	margin: 0px 0px 0px 0px;
 }
 
