--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -73,9 +73,8 @@
   </div>
 
 
-<div id="header_content" class='container-fluid'> 
+<div id="header_content" class='container'> 
    <%= yield(:header_content) %>
-   <%= yield(:first_header) %>
 </div>
 
 
