--- a/app/views/projects/_project_files.html.erb
+++ b/app/views/projects/_project_files.html.erb
@@ -28,7 +28,7 @@
 
 	<%= form_tag "#{project_path @project}/files", :multipart => true do %>
 	  <%= file_field_tag 'file' %>
-	  <%= submit_tag 'Add file' %>
+	  <%= submit_tag 'Add file', class: "btn btn-info" %>
 	<% end %>
 	
 	<% if current_user_is_aiddata %>
