--- a/app/views/projects/_project_flaggable.html.erb
+++ b/app/views/projects/_project_flaggable.html.erb
@@ -1,9 +1,20 @@
 <script type='text/javascript'>
 
 	$(function() {
-		$('.flaggable').append("<span class='flag-links'> \
-			<i class='flag-link'>Flag this:</i> \
-			 <%= FlagType.all.map { |ft| "<a href='#' style='color:#{ft.color}' class='flag-link flag-link-#{ft.name}'>#{ft.name}</a> " }.join("  ").html_safe %> \
+		$('.flaggable').append("<span class='flag-links pull-right'> \
+			 <%= FlagType.all.map { |ft|  
+			 	"<a href='#' " + 
+			 	"class='btn-small btn-#{
+			 		if ft.color=='red'
+			 			"danger"
+			 		elsif ft.color == 'green'
+			 			"success"
+			 		else
+			 			"info"
+			 		end
+			 	} flag-link flag-link-#{ft.name}'> " +
+			 	"#{ft.name}</a> " 
+			}.join("  ").html_safe %> \
 			  </span>")
 		
 
