--- a/app/views/static_pages/new_map.html.haml
+++ b/app/views/static_pages/new_map.html.haml
@@ -20,10 +20,10 @@
 = stylesheet_link_tag "leaflet/leaflet"
 
 
-.row
+.row-fluid
 	#map.span6{style: "height:500px;"}
 	#chart.span6
-.row
+.row-fluid
 	#top_projects.span12
 		%h2 
 			Top Projects in 
