--- a/app/assets/stylesheets/layout/header.css.scss.erb
+++ b/app/assets/stylesheets/layout/header.css.scss.erb
@@ -112,7 +112,7 @@ header {
 			max-width: 900px;
 			max-height: 500px;
 			margin: auto auto;
-			padding: 10px;
+			//padding: 10px;
 
 			.carousel-inner {
 
