--- a/app/assets/stylesheets/project/project_index.css.scss
+++ b/app/assets/stylesheets/project/project_index.css.scss
@@ -1,38 +1,18 @@
 
                                         /* Project Index */
+
 #project-search-results {
-
-
-
-	margin-right:auto;
-	margin-left:auto;
-
-  th {
-  margin: 2px 8px 4px 8px;
-  padding: 2px 3px 2px 3px; 
-  border-left: 1px solid #ddd;
-
-  }
-
   td {
-  border-left: 1px solid #ddd;
-  margin: 2px 8px 4px 8px;
-  max-width:500px;
-  padding: 2px 3px 2px 3px; 
-  border-top: 1px solid #999;
+    padding: 2px;
   }
 }
-
-
 .pagination {
   vertical-align:center;
   text-align:center;
 }
 
 #project-facets  {
-    border: 1px solid #333;
-    background-color: #ddd;
-    padding: 10px;
+    margin-bottom: 10px;
   
     .facet-list{ 
       list-style:none;
