--- a/app/views/projects/_comment_form.html.erb
+++ b/app/views/projects/_comment_form.html.erb
@@ -1,4 +1,3 @@
-<h2>Leave a Comment</h2>
 <% user = current_user %>
 <% user_name = (user && user.name) || nil %>
 <% user_email = (user && user.email) || nil %>
@@ -8,22 +7,18 @@
 
     <%= f.input :project_id, label: "Leave a comment for '#{@project.title}':",
       input_html: {style: "display:none;", value: @project.id} %>
-
-    <%= f.input :name, input_html: { class: "span3", value: user_name }%>
-    <%= f.input :email, input_html: { class: "span3", value: user_email },
+    <div class='row-fluid'>
+      <%= f.input :name, wrapper_html: {class: "span6"}, input_html: {value: user_name }%>
+      <%= f.input :email, wrapper_html: { class: "span6"}, input_html: { value: user_email },
                 hint: "For validation only -- not published, not shared." %>
+    </div>
     <% if not user %>
-      <p>
-        You are not currently logged in to the Aiddata site.
-        Comments submitted by non logged in users must be approved by
-        site administrators before they are displayed.</br>
-      </p>
-      <p>
-        Consider <%= link_to "signing in", signin_path %> 
-        before submitting a comment to avoid the approval process.
+      <p class='row'>
+        Unless you <%= link_to "sign in", signin_path %>,
+        your comment will be reviewed by AidData before being posted. 
       </p>
     <% end %>
-		<%= f.input :content, label: "Message", input_html: {class: "span5", rows: 5} %>
+		<%= f.input :content, label: "Message", input_html: {class: "row", rows: 5} %>
 
     <%= f.button :submit, "Submit" %>
 <% end %>
