--- a/app/views/projects/_search.html.erb
+++ b/app/views/projects/_search.html.erb
@@ -10,76 +10,72 @@
 <% @current_url_without_scope = @current_url.gsub(/\&?scope_names[^=]*=.+[\&\?]?/, '') %>
 
 
-<div class="row-fluid" id='project-facets'>
-	<div class="span12">
+<div id='project-facets' class='well'>
+	<div class="row-fluid">
 		<div class='span12'>
 			<%= render partial: 'projects/search_scope' %>
 		</div>
-		<%= form_tag "/projects", method: :get do %>
-			<p> 
-				<b>Search: </b> 
-				<%= text_field_tag :search, params[:search], class: "span7" %>
-				<%= submit_tag "Submit", name: nil, class: "btn btn-primary" %>
-
-				<% 
-				@all_projects = Project.search do
-					(WORKFLOW_FACETS + FACETS).each do |f|
-						facet f[:sym]
-					end
-
-				end 
-				%>
-				<div class='span12'>
-					<p><b>Filters:</b> 
-						<i>
-							<%= link_to_function "Unselect All", "$('.search_check').prop('checked', false); update_all_check_counts();" %>
-						</i>
-					</p>
-				</div>
-				<div class='span12 row-fluid'>
-					<% first_part = (FACETS.count/3).round %>
-					<div class='span4'>
-						<ol>
-						<% FACETS[0..first_part].each do |f| %>
-							<%= render partial: 'projects/search_facet', locals: {f: f} %>
-						<% end %>
-						</ol>
-					</div>
-					<div class='span4'>
-						<ol>
-						<% FACETS[first_part+1..(2*first_part)].each do |f| %>
-							<%= render partial: 'projects/search_facet', locals: {f: f} %>
-						<% end %>
-						</ol>
-					</div>
-					<div class='span4'>
-						<ol>
-						<% FACETS[(2*first_part)+1..-1].each do |f| %>
-							<%= render partial: 'projects/search_facet', locals: {f: f} %>
-						<% end %>
-						</ol>
-					</div>
-				</div>
-				<% if current_user_is_aiddata %>
-					<div class='row'>			
-						<p><b>AidData Workflow Filters:</b><p>
-						<ol>
-							<% WORKFLOW_FACETS.each do |f| %>
-								<%= 
-									render partial: 'projects/search_facet', locals: {f: f} 
-								%>
-							<% end %>
-						</ol>					
-					</div>
-				<% end %>
-
-
-				
-			<%= submit_tag "Submit", name: nil, class: "btn btn-primary" %>
-			</p>
-
-			
-		<% end %>
 	</div>
 
+	<%= form_tag "/projects", method: :get do %>	
+		<div class='row-fluid'>	 
+			<b class='span1'>Search: </b> 
+			<%= text_field_tag :search, params[:search], class: "span7" %>
+			<%= submit_tag "Submit", name: nil, class: "btn btn-primary span2" %>
+		</div>
+
+		<% 
+			@all_projects = Project.search do
+				(WORKFLOW_FACETS + FACETS).each do |f|
+					facet f[:sym]
+				end
+
+			end 
+		%>
+		<div class='row-fluid'>
+			<p class='span12'>
+				<b>Filters:</b> 
+				<i>
+					<%= link_to_function "Unselect All", "$('.search_check').prop('checked', false); update_all_check_counts();" %>
+				</i>
+			</p>
+		</div>
+		<div class='row-fluid'>
+			<% first_part = (FACETS.count/3).round %>
+			<div class='span4'>
+				<ol>
+				<% FACETS[0..first_part].each do |f| %>
+					<%= render partial: 'projects/search_facet', locals: {f: f} %>
+				<% end %>
+				</ol>
+			</div>
+			<div class='span4'>
+				<ol>
+				<% FACETS[first_part+1..(2*first_part)].each do |f| %>
+					<%= render partial: 'projects/search_facet', locals: {f: f} %>
+				<% end %>
+				</ol>
+			</div>
+			<div class='span4'>
+				<ol>
+				<% FACETS[(2*first_part)+1..-1].each do |f| %>
+					<%= render partial: 'projects/search_facet', locals: {f: f} %>
+				<% end %>
+				</ol>
+			</div>
+		</div>
+		<% if current_user_is_aiddata %>
+			<div class='row-fluid'>			
+				<p><b>AidData Workflow Filters:</b><p>
+				<ol>
+					<% WORKFLOW_FACETS.each do |f| %>
+						<%= 
+							render partial: 'projects/search_facet', locals: {f: f} 
+						%>
+					<% end %>
+				</ol>					
+			</div>
+		<% end %>
+		<%= submit_tag "Submit", name: nil, class: "btn btn-primary" %>		
+	<% end %>
 </div>
