--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
 <div class='container-fluid'>
 	<div class='row'><br><br></div>
 	<div class='row-fluid'>
-		<div id='home_carousel' class='span9 carousel slide'>
+		<div id='home_carousel' class='span9 carousel slide with_shadow'>
 		  <ol class='carousel-indicators'>
 		    <li data-target='#home_carousel' data-slide-to='0' class='active'></li>
 		    <li data-target='#home_carousel' data-slide-to='1'></li>
@@ -42,14 +42,14 @@
 		</div>
 		<div class='span3 home_thumbnails'>
 			<ul class='thumbnails'>
-				<li>
-					<a href="/content/using_the_data" class="thumbnail">
+				<li class=''>
+					<a href="/content/using_the_data" class="with_shadow thumbnail">
 						<h4>How to Use the Data</h4>
 						<img src='holder.js/250x250'>
 					</a>
 				</li>
 				<li>
-					<a href="/content/improving_the_data" class="thumbnail">
+					<a href="/content/improving_the_data" class="with_shadow thumbnail">
 						<h4>Help us Improve the Data</h4>
 						<img src='holder.js/250x250'>
 					</a>
@@ -96,53 +96,55 @@ EOS
 	</ul>
 </div>
 
-<div class='row-fluid well' id='home_media'>
-	<div class='span4'>
-		<h3>
-			In the News:
-		</h3>
-		<ul class='unstyled'>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-		</ul>
-	</div>
-	<div class='span4'>
-		<h3>
-			Recent Tweets:
-		</h3>
-		<ul class='unstyled'>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-		</ul>
-	</div>
-	<div class='span4'>
-		<h3>
-			Publications:
-		</h3>
-		<ul class='unstyled'>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-			<li>
-				<a href='#'>Exciting News article featuring our work!</a>
-			</li>
-		</ul>
+<div class='row-fluid' id='home_media'>
+	<div class='span12 row-fluid well'>
+		<div class='span4'>
+			<h3>
+				In the News:
+			</h3>
+			<ul class='unstyled'>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+			</ul>
+		</div>
+		<div class='span4'>
+			<h3>
+				Recent Tweets:
+			</h3>
+			<ul class='unstyled'>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+			</ul>
+		</div>
+		<div class='span4'>
+			<h3>
+				Publications:
+			</h3>
+			<ul class='unstyled'>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+				<li>
+					<a href='#'>Exciting News article featuring our work!</a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </div>
