Fitting project edit page in container

--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -14,7 +14,7 @@
 
 	<%= simple_form_for(@project, html: {class: ""}) do |f| %>
 
-		<div id='project-form-content' class='span12'>
+		<div id='project-form-content'>
 
 			<div class='row-fluid'>
 				
