New header background

--- a/app/assets/stylesheets/layout/header.css.scss.erb
+++ b/app/assets/stylesheets/layout/header.css.scss.erb
@@ -2,7 +2,7 @@
                       /* header */
 header {
 
-	background-image: url(<%=asset_path "aiddata_background.jpg"%>);
+	background-image: url(<%=asset_path "aiddata_background2.jpg"%>);
 	background-position: top center;
 	background-clip: border-box;
 	background-repeat: no-repeat;
@@ -102,16 +102,17 @@ header {
 
 	#header_content {
 		h1 {
-			margin-left: 180px;
+			margin: auto, 180px;
 			color: white;
 			text-shadow: black 2px 2px 10px;
+			text-align:center;
 	}
 
 		#home_carousel {
 			
 			max-width: 900px;
 			max-height: 500px;
-			margin: auto auto;
+			margin: 20px auto 0px auto;
 			//padding: 10px;
 
 			.carousel-inner {
