--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,7 +39,7 @@ html {
   visibility:hidden;
 }
 body {
-  background-color: #f3f3f3;
+  background-color: #f9f9f9;
   font-family: Tahoma, Arial, sans-serif;
   line-height: 14px;
 
@@ -51,8 +51,8 @@ body {
     &.main {
       padding: 10px 10px;
       background-color: white;
-      bottom: 0px;
     }
+
   }
 }
 
@@ -63,9 +63,11 @@ section {
 //*/
 
 .alerts {
-  margin-top: 10px;
+  margin-top: 5px;
   display: block;
 }
+
+
 .row-fluid, .row {
   margin-left:0px;
 }
@@ -91,14 +93,14 @@ h1 {
   font-size: 3em;
   letter-spacing: -2px;
   margin-bottom: 30px;
-  text-align: center;
+  //text-align: center;
 }
 
 h2 {
   font-size: 1.7em;
   letter-spacing: -1px;
   margin-bottom: 30px;
-  text-align: center;
+  //text-align: center;
   font-weight: normal;
   color: $grayLight;
 }
