--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -145,12 +145,12 @@ provide(:header_content, header_content.html_safe)
 </div>
 
 <div class='row-fluid'>
-	<div class="span6 row-fluid">
-		<div class='span12'>
+	<div class="span6">
+		<div class='row-fluid'>
 			<h4>Transactions:</h4>
 			<%= render 'project_transactions' %>
 		</div>
-		<div class='span12'>
+		<div class='row-fluid'>
 			<h4>Sources:</h4>
 			<%= render 'project_sources' %>
 		</div>
