--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Projects") %>
-<% provide(:first_header, "Search Projects") %>
+<% provide(:header_content, "<h1>Search All Projects</h1>".html_safe) %>
 
 <% # @current_url and @joiner are set in _project_search.html.erb %>
 
