--- a/app/views/static_pages/aggregate_exporter_page.html.erb
+++ b/app/views/static_pages/aggregate_exporter_page.html.erb
@@ -1,4 +1,4 @@
 <% provide :title, "Aggregate data" %>
-<% provide :first_header, "Make an Aggregate Dataset" %>
+<% provide :header_content, "<h1>Make an Aggregate Dataset</h1>".html_safe %>
 
 <%= render partial: "aggregate_exporter", locals: @aggregator_locals %>
