Loads Robocodes by AJAX

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,6 +9,7 @@ $linkColor: #1146a6;
 $sansFontFamily: Arial, Tahoma, sans-serif;
 $btnInfoBackground: #63a3d1;
 $btnInfoBackgroundHighlight: #4881b6;
+$infoText: #63a3d1;
 /* my stuff */
 $invalidRed: #942;
 $whiteShadow: rgb(18, 30, 50) 3px 3px 3px;
